@@ -8,6 +8,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -91,15 +92,16 @@ class FavoriteFolderStreamApiTest {
             Long memberId = testDataHelper.insertMember(accountId, "test@example.com", false);
             testDataHelper.insertTuripMember(memberId, "turip", "TestPass1!");
             Long folderId = testDataHelper.insertFavoriteFolder("테스트 폴더");
-            testDataHelper.insertFavoriteFolderAccount(folderId, accountId, AccountRole.OWNER);
+            testDataHelper.insertFavoriteFolderAccount(accountId, folderId, AccountRole.OWNER);
 
             String accessToken = loginAndGetAccessToken("turip", "TestPass1!");
-            URL url = new URL("http://localhost:" + port + "/api/v1/turips/" + folderId + "/stream");
+            URL url = new URI("http://localhost:" + port + "/api/v1/turips/" + folderId + "/stream").toURL();
 
             // when
-            BufferedReader reader = connectStreamingAndGetInputBuffer(url, accessToken);
-            List<String> events = readUntilEvent(reader, "connect");
-            reader.close();
+            List<String> events;
+            try (BufferedReader reader = connectStreamingAndGetInputBuffer(url, accessToken);) {
+                events = readUntilEvent(reader, "connect");
+            }
 
             // then
             assertThat(events).anyMatch(event -> event.contains("connect"));
@@ -114,15 +116,16 @@ class FavoriteFolderStreamApiTest {
             Long memberId = testDataHelper.insertMember(accountId, "test@example.com", false);
             testDataHelper.insertTuripMember(memberId, "turip", "TestPass1!");
             Long folderId = testDataHelper.insertFavoriteFolder("테스트 폴더");
-            testDataHelper.insertFavoriteFolderAccount(folderId, accountId, AccountRole.OWNER);
+            testDataHelper.insertFavoriteFolderAccount(accountId, folderId, AccountRole.OWNER);
 
             String accessToken = loginAndGetAccessToken("turip", "TestPass1!");
-            URL url = new URL("http://localhost:" + port + "/api/v1/turips/" + folderId + "/stream");
+            URL url = new URI("http://localhost:" + port + "/api/v1/turips/" + folderId + "/stream").toURL();
 
             // when
-            BufferedReader reader = connectStreamingAndGetInputBuffer(url, accessToken);
-            List<String> events = readUntilEvent(reader, "heartbeat");
-            reader.close();
+            List<String> events;
+            try (BufferedReader reader = connectStreamingAndGetInputBuffer(url, accessToken);) {
+                events = readUntilEvent(reader, "heartbeat");
+            }
 
             // then
             assertThat(events).anyMatch(event -> event.contains("heartbeat"));
@@ -136,7 +139,7 @@ class FavoriteFolderStreamApiTest {
             Long ownerMemberId = testDataHelper.insertMember(ownerAccountId, "test@example.com", false);
             testDataHelper.insertTuripMember(ownerMemberId, "owner", "TestPass1!");
             Long folderId = testDataHelper.insertFavoriteFolder("테스트 폴더");
-            testDataHelper.insertFavoriteFolderAccount(folderId, ownerAccountId, AccountRole.OWNER);
+            testDataHelper.insertFavoriteFolderAccount(ownerAccountId, folderId, AccountRole.OWNER);
 
             Long notOwnerAccountId = testDataHelper.insertAccount();
             Long notOwnerMemberId = testDataHelper.insertMember(notOwnerAccountId, "test2@example.com", false);
